<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.signup.SignUpActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_signup"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/lamp"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_20sdp"
                android:contentDescription="@string/lamp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:textSize="@dimen/_30ssp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/white"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:inputType="textPersonName"
                    android:autofillHints="edittext"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/white"/>

                <EditText
                    app:passwordToggleEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword"
                    android:autofillHints="edittext"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeat_password"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/white"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/white"
                        android:inputType="textPassword"
                        android:autofillHints="edittext"
                        tools:ignore="LabelFor" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="@dimen/_12sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorRed"
                    android:textAllCaps="false"
                    android:layout_marginTop="@dimen/_50sdp"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atau_sudah_mempunyai_akun"
                android:textAlignment="center"
                android:textSize="@dimen/_15ssp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/colorRed"
                app:cornerRadius="@dimen/_12sdp"
                android:text="@string/log_in"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</layout>