<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data >


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.splashscreen.MainActivity">

        <LinearLayout
            android:id="@+id/linear_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/background_welcome"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_230sdp"
                android:contentDescription="@string/this_background"
                android:scaleType="fitXY"
                android:src="@drawable/welcome1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_pinterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@id/linear_background">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_pinterest"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/pinterest" />

            <TextView
                android:id="@+id/tx_selamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selamar_datang_di_pinterest"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_below="@id/linear_pinterest">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorRed"
                app:hintTextColor="@color/colorRed"
                app:startIconDrawable="@drawable/ic_account"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/username"
                    android:inputType="textPersonName|textCapWords"
                    android:autofillHints="username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:onClick="onClick"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:backgroundTint="@color/colorRed"
                app:cornerRadius="@dimen/_12sdp"
                android:text="@string/get_started"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</layout>